fleet/affine/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  namespace: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          volumeMounts:
            - name: upload
              mountPath: /root/.affine/storage
            - name: config
              mountPath: /root/.affine/config
        # affine-migration moved to a Job
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10
        - name: postgres
          image: pgvector/pgvector:pg16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: affine-upload
        - name: config
          persistentVolumeClaim:
            claimName: affine-config
        - name: db-data
          persistentVolumeClaim:
            claimName: affine-db-data
