fleet/affine/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
spec:
  selector:
    app: affine
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: affine
spec:
  selector:
    app: affine
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: affine
spec:
  selector:
    app: affine
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
