fleet/affine/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
    - host: affine.domain.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 3010
